--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
                 <li class="nav-list__item"><a href="/" class="nav-list__item-link">Boxes</a></li>
             </ul>
                 <a href="/" class="nav__logo">
-                    <picture class="nav-logo__picture">
-                    <source srcset="./images/logo1.png 1x, ./images/logo2.png 2x" media="(max-width: 79.9rem)" class="nav-logo__source">
-                    <source srcset="./images/desktop/desklogo.png 1x, ./images/desktop/desklogo2.png 2x" media="(min-width: 80rem)" class="nav-logo__source">
-                    <img src="./images/desktop/desklogo2.png" media="(min-width: 41.626rem)" alt="logo" class="nav-logo__img">
+                    <picture>
+                    <source srcset="./images/logo1.png 1x, ./images/logo2.png 2x" media="(max-width: 79.9rem)">
+                    <source srcset="./images/desktop/desklogo.png 1x, ./images/desktop/desklogo2.png 2x" media="(min-width: 80rem)">
+                    <img src="./images/desktop/desklogo2.png" media="(min-width: 41.626rem)" alt="logo">
                 </picture>
                 </a>
                 <ul class="nav__list">
@@ -315,13 +315,13 @@
             <div class="blog__image-wrap">
             <picture>
                 <source srcset="./images/desktop/deskblog2-1.jpg 1x, ./images/desktop/deskblog2-2.jpg 2x">
-                <img src="./images/desktop/deskblog2-2.jpg" srcset="./images/desktop/deskblog2-1.jpg 1x, ./images/desktop/deskblog2-2.jpg 2x" alt="flowers and box">
+                <img src="./images/desktop/deskblog2-2.jpg" srcset="./images/desktop/deskblog2-1.jpg 1x, ./images/desktop/deskblog2-2.jpg 2x" alt="girl and the box">
             </picture>
             </div>
             <div class="blog__text-wrap">
-            <h4 class="blog-title-smaller">Why KIWI Eco Box?</h4>
+            <h4 class="blog-title-smaller">What Is Inside The April Kiwi Eco Box? Portable Lunch Box</h4>
             <div class="blog__svg-wrap"><object data="./svg/reuseline.svg" width="3.75rem" height="0.312rem" class="reusable-line"></object></div>
-            <p class="blog-text">Get started by signing up for monthly subscription. We bring you an easy way to start your zero-waste journey</p>
+            <p class="blog-text">Every month receive your box with essential products, but plastic free and safe for the environment</p>
             <button type="button" class="blog__button"><span>Read more</span><div class="blog__plus-wrap"><svg class="blog__plus-icon" width="0.5rem" height="0.5rem"><use href="./svg/icons.svg#icon-plus" /></svg></div></button>
             </div>
         </div>
@@ -331,13 +331,13 @@
             <div class="blog__image-wrap">
             <picture>
                 <source srcset="./images/desktop/deskblog3-1.jpg 1x, ./images/desktop/deskblog3-2.jpg 2x">
-                <img src="./images/desktop/deskblog3-2.jpg" srcset="./images/desktop/deskblog3-1.jpg 1x, ./images/desktop/deskblog3-2.jpg 2x" alt="flowers and box">
+                <img src="./images/desktop/deskblog3-2.jpg" srcset="./images/desktop/deskblog3-1.jpg 1x, ./images/desktop/deskblog3-2.jpg 2x" alt="girl with boxes">
             </picture>
             </div>
             <div class="blog__text-wrap">
-            <h4 class="blog-title-smaller">Why KIWI Eco Box?</h4>
+            <h4 class="blog-title-smaller">Make a Difference</h4>
             <div class="blog__svg-wrap"><object data="./svg/reuseline.svg" width="3.75rem" height="0.312rem" class="reusable-line"></object></div>
-            <p class="blog-text">Get started by signing up for monthly subscription. We bring you an easy way to start your zero-waste journey</p>
+            <p class="blog-text">Small steps can lead to bigger changes, and now you are the change. Let's build community of people who care</p>
             <button type="button" class="blog__button"><span>Read more</span><div class="blog__plus-wrap"><svg class="blog__plus-icon" width="0.5rem" height="0.5rem"><use href="./svg/icons.svg#icon-plus" /></svg></div></button>
             </div>
         </div>
@@ -349,36 +349,60 @@
         </div>
         <div><object data="./svg/blog-big-line.svg" class="blog-big-line"></object></div>
     </section>
-        <!-- <section class="inbox">
+        <section class="inbox">
             <div class="container">
-            <div class="inbox__svg-wrap"><object data="./svg/reuseline.svg" width="3.75rem" height="0.312rem" class="reusable-line"></object></div>
+            <div class="inbox__svg-text">
+                <div class="inbox__svg-wrap"><object data="./svg/reuseline.svg" width="3.75rem" height="0.312rem" class="reusable-line"></object></div>
             <p class="inbox-text">Stay in the know</p>
-        <h3 class="inbox-title-smaller">Hear about the latest sneak peaks and spoilers</h3>
-            <div class="inbox__image-wrap">
-                <picture class="inbox__images-picture">
-            <source class="inbox__images-source" srcset="./images/sneak1.png 1x, ./images/sneak2.png 2x">
+        </div>
+        <div class="inbox__smtitle-wrap"><object data="./svg/reuseline.svg" width="3.75rem" height="0.312rem" class="reusable-line"></object><h3 class="inbox-title-smaller">Hear about the latest sneak peaks and spoilers</h3></div>
+        <div class="inbox__reverse-wrap">
+        <div class="inbox__sneak-box">
+                <picture>
+            <source srcset="./images/sneak1.png 1x, ./images/sneak2.png 2x" media="(max-width: 41.625rem)">
+            <source srcset="./images/desktop/deskbox-sneak1.png 1x, ./images/desktop/deskbox-sneak2.png 2x" media="(min-width: 41.626rem)">
+            <img src="./images/desktop/deskbox-sneak2.png" srcset="./images/desktop/deskbox-sneak1.png 1x, ./images/desktop/deskbox-sneak2.png 2x" alt="box with goodies" width="61.875rem">
         </picture>
-        <img src="./images/sneak1.png" srcset="./images/sneak1.png 1x, ./images/sneak2.png 2x" alt="box with goodies">
     </div>
-    <h2 class="inbox-title">get CAUSEBOX delivered directly <span>to your inbox!</span></h2>
-    <input type="email" placeholder="You email adress" class="inbox-input works-list__item--gradient-border">
-    <button type="button" class="inbox-button button"><span>Sign up</span></button>
-    <p class="inbox__policy-text">By clicking "sign up" you agree to receive emails from CAUSEBOX and accept our web terms of use and privacy and cookie policy</p>
-    </div>
-    </section> -->
-        <!-- <section class="clients">
+    <div class="inbox__input-wrap">
+        <div class="inbox__title-wrap"><h2 class="inbox-title">get CAUSEBOX delivered directly <br /> <span>to your inbox!</span></h2></div>
+        <div class="inbox__label-policy">
+        <label class="inbox__input-button">
+        <input type="email" placeholder="You email adress" class="inbox-input works-list__item--gradient-border">
+         <button type="button" class="inbox-button button"><span>Sign up</span></button>
+        </label>
+        <p class="inbox__policy-text">By clicking "sign up" you agree to receive emails from CAUSEBOX and accept our web terms of use and privacy and cookie policy</p>
+        </div>
+        </div>
+</div>
+        <button type="button" class="inbox-button button"><span>Sign up</span></button>
+        <p class="inbox__policy-text">By clicking "sign up" you agree to receive emails from CAUSEBOX and accept our web terms of use and privacy and cookie policy</p>
+        </div>
+    </section>
+        <section class="clients">
             <div class="container">
+                <div class="clients__text-title">
             <p class="clients-text">What do our</p>
         <h3 class="clients-title">clients say</h3>
+        </div>
+    <div class="clients__card-buttons">
+            <div class="clients__image">
+                <picture>
+            <source srcset="./images/desktop/clients1.png 1x, ./images/desktop/clients2.png 2x" media="(min-width: 41.626rem)">
+            <img src="./images/desktop/clients2.png" srcset="./images/desktop/clients1.png 1x, ./images/desktop/clients2.png 2x" alt="box with goodies" width="61.875rem">
+        </picture>
+    </div>
+
         <div class="clients-card">
             <div class="clients-card__subcard">
                 <div class="clients-subcard__quotes-absolute"><svg class="quotes-icon" width="3.1875rem" height="2.625rem"><use href="./svg/icons.svg#icon-quote" /></svg></div>
-        <div class="clients-card__image-wrap">
+        <div class="clients__avatar-rating">
+            <div class="clients-card__image-wrap">
             <picture class="clients-card__picture">
             <source srcset="./images/client1.jpg 1x, ./images/client2.jpg 2x" class="clients-card__source">
         </picture>
-        <img src="./images/client1.jpg" srcset="./images/client1.jpg 1x, ./images/client2.jpg 2x" alt="client"class="clients-card__img">
-    </div>
+        <img src="./images/client2.jpg" srcset="./images/client1.jpg 1x, ./images/client2.jpg 2x" alt="client"class="clients-card__img">
+    </div>          
     <div class="clients-card__subcard-info">
         <h4 class="card-username">Jessica T.</h4>
         <div class="clients-card__subcard-rating">
@@ -417,8 +441,10 @@
         <div class="clients-card__text-wrap">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-        <div class="fade"></div>
+        </div>
         <ul class="clients-card__buttons-list">
             <li class="buttons-list__item">
                 <button class="buttons-list__item-button">
@@ -437,8 +463,14 @@
         </ul>
         </div>
         </div>
-    </section> -->
-        <!-- <section class="contacts">
+        </div>
+        <div class="clients__big-line"><svg><use href="./svg/icons.svg#clients-big-line" /></svg></div>
+        <div><object data="./svg/recent-blue-ellipse.svg" class="clients__blue-ellipse1"></object></div>
+        <div class="clients__quotes-absolute"><svg class="quotes-icon"><use href="./svg/icons.svg#icon-quote" /></svg></div>
+        <div><object data="./svg/clients-blue-ellipse.svg" class="clients__blue-ellipse2"></object></div>
+        <div><object data="./svg/clients-red-ellipse.svg" class="clients__red-ellipse"></object></div>
+    </section>
+        <section class="contacts">
             <div class="contacts-container container">
             <div class="contacts__image-wrap">
                 <a href="/" class="contacts__image-link">
@@ -506,8 +538,75 @@
                 </a>
             </li>
         </ul>
+        <div class="contacts-desk">
+            <nav class="contacts-desk__nav1">
+            <ul class="contacts-desk__list1">
+                <li class="contacts-desk-list1__item">
+                    <a href="/" class="contacts-desk-list1__item-link">Home</a>
+                </li>
+                <li class="contacts-desk-list1__item">
+                    <a href="/" class="contacts-desk-list1__item-link">Boxes</a>
+                </li>
+                <li class="contacts-desk-list1__item">
+                    <a href="/" class="contacts-desk-list1__item-link">About</a>
+                </li>
+                <li class="contacts-desk-list1__item">
+                    <a href="/" class="contacts-desk-list1__item-link">Account</a>
+                </li>
+                <li class="contacts-desk-list1__item">
+                    <a href="/" class="contacts-desk-list1__item-link">blog</a>
+                </li>
+            </ul>
+            </nav>
+            <a href="/" class="nav-desk__logo">
+                <picture>
+                    <source srcset="./images/desktop/deskclientlogo.png 1x, ./images/desktop/deskclientlogo2.png 2x" media="(max-width: 41.625rem)">
+                    <img src="./images/desktop/deskclientlogo2.png" srcset="./images/desktop/deskclientlogo.png 1x, ./images/desktop/deskclientlogo2.png 2x" media="(min-width: 41.626rem)" alt="logo">
+                </picture>
+            </a>
+            <nav class="contacts-desk__nav2">
+            <ul class="contacts-desk__list2">
+                <li class="contacts-desk-list2__item">
+                    <a href="/" class="contacts-desk-list2__item-link">Faq</a>
+                </li>
+                <li class="contacts-desk-list2__item">
+                    <a href="/" class="contacts-desk-list2__item-link">CONTACT US</a>
+                </li>
+            </ul>
+            <ul class="contacts-desk__list3">
+                <li class="contacts-desk-list3__item">
+                    <a href="/" class="contacts-desk-list3__item-link">
+                        <svg width="1.875rem" height="1.875rem">
+                            <use href="./svg/icons.svg#icon-facebook" ></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="contacts-desk-list3__item">
+                    <a href="/" class="contacts-desk-list3__item-link">
+                        <svg width="1.875rem" height="1.875rem">
+                            <use href="./svg/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="contacts-desk-list3__item">
+                    <a href="/" class="contacts-desk-list3__item-link">
+                        <svg width="1.875rem" height="1.875rem">
+                            <use href="./svg/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="contacts-desk-list3__item">
+                    <a href="/" class="contacts-desk-list3__item-link">
+                        <svg width="1.875rem" height="1.875rem">
+                            <use href="./svg/icons.svg#icon-youtube"></use>
+                        </svg>
+                    </a>
+                </li>
+        </ul>
+            </nav>
+            </div>
         </div>
-    </section> -->
+    </section>
     </main>
     <footer class="footer">
         <!-- <div class="footer-container container">
