--- a/src/index.html
+++ b/src/index.html
@@ -609,13 +609,15 @@
     </section>
     </main>
     <footer class="footer">
-        <!-- <div class="footer-container container">
+        <div class="footer-container container">
             <div class="footer-year"><p class="footer-year">Kiwi Eco Box © 2021</p></div>
+            <div class="footer__text-svg">
             <div class="footer-by"><p class="footer-by">Development by SheepFish</p></div>
             <div class="footer__svg-wrap"><svg class="footer-icon" width="2.375rem" height="1.875rem">
             <use href="./svg/icons.svg#icon-sheepfish"></use>
         </svg></div>
-        </div> -->
+        </div>
+        </div>
 </footer>
 
     <div class="backdrop">
